--- a/DatabaseExample/Base.lproj/Main.storyboard
+++ b/DatabaseExample/Base.lproj/Main.storyboard
@@ -43,21 +43,21 @@
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Name" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EWg-HQ-tHa">
-                                <rect key="frame" x="44" y="20" width="45" height="21"/>
+                                <rect key="frame" x="16" y="20" width="73" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Address" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Y6w-8r-BMM">
-                                <rect key="frame" x="26" y="59" width="63" height="21"/>
+                                <rect key="frame" x="16" y="59" width="73" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Phone" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IU0-R4-8Ul">
-                                <rect key="frame" x="40" y="97" width="49" height="21"/>
+                                <rect key="frame" x="16" y="97" width="73" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
@@ -90,10 +90,13 @@
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </view>
                     <connections>
-                        <outlet property="address" destination="SQa-L3-FPF" id="QLh-fA-2ME"/>
-                        <outlet property="name" destination="4kF-3u-6Pu" id="Jar-DQ-ala"/>
-                        <outlet property="phone" destination="oIZ-Ee-h92" id="6Ta-u8-VjP"/>
-                        <outlet property="status" destination="bmU-SZ-yxX" id="Jte-qU-rjV"/>
+                        <outlet property="labelAddress" destination="Y6w-8r-BMM" id="0QB-9F-KYF"/>
+                        <outlet property="labelName" destination="EWg-HQ-tHa" id="V0i-yg-fd8"/>
+                        <outlet property="labelPhone" destination="IU0-R4-8Ul" id="VnK-jH-327"/>
+                        <outlet property="labelStatus" destination="bmU-SZ-yxX" id="vhg-EZ-WvR"/>
+                        <outlet property="textFieldAddress" destination="SQa-L3-FPF" id="5oc-gG-set"/>
+                        <outlet property="textFieldName" destination="4kF-3u-6Pu" id="Oac-Ws-fY4"/>
+                        <outlet property="textFieldPhone" destination="oIZ-Ee-h92" id="esg-ni-ucR"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
