Added action that responds to editingChanged event on name text field. Invokes the findContact method. Search works but only looks for complete string.

--- a/DatabaseExample/Base.lproj/Main.storyboard
+++ b/DatabaseExample/Base.lproj/Main.storyboard
@@ -36,6 +36,9 @@
                                         <nil key="textColor"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits"/>
+                                        <connections>
+                                            <action selector="findOnPartialName:" destination="BYZ-38-t0r" eventType="editingChanged" id="Y4m-ik-e3D"/>
+                                        </connections>
                                     </textField>
                                 </subviews>
                                 <constraints>
